Spencil component done

--- a/scripts/styles/styles.css
+++ b/scripts/styles/styles.css
@@ -3,12 +3,13 @@
     display: flex;
     flex-wrap: wrap;
     color: white;
+    height: 100%;
 }
 
 .designer-view > div {
     flex-grow: 1;
     width: 33%;
-    height: 100px;
+
 }
 .designer-view > div:nth-child(even) {
     background: #23a;
@@ -16,4 +17,23 @@
 .designer-view > div:nth-child(odd) {
     width: 200px;
     background: #49b;
+}
+
+my-menu {
+    color: #000;
+    width: 50px;
+}
+
+.select-component-button {
+    margin-top: 170%;
+    width: 335px;
+    height: 50px;
+}
+
+body {
+    height: 1000px;
+}
+
+.selected-component {
+    border: 2px solid palevioletred;
 }
