--- a/scripts/styles/styles.css
+++ b/scripts/styles/styles.css
@@ -24,7 +24,7 @@ my-menu {
     width: 50px;
 }
 
-.select-component-button {
+my-stencil .select-component-button {
     margin-top: 170%;
     width: 335px;
     height: 50px;
@@ -38,7 +38,7 @@ my-stencil .selected-component {
     border: 2px solid palevioletred;
 }
 
-.type {
+foo-component > div {
     height: 200px;
     width: 100%;
     background-color: #F6C6CE;
