--- a/scripts/main/designer/components/stencil/stencil.template.html
+++ b/scripts/main/designer/components/stencil/stencil.template.html
@@ -1,7 +1,7 @@
-<div ng-repeat="component in components">
+<div ng-repeat="component in components track by $index">
     <div class="component"
          ng-class="{'selected-component': isComponentSelected(component)}">
-        <label ng-click="selectComponent(component)">{{component.label}}</label>
+        <label ng-click="selectComponent(component, $index)">{{::component.name}}</label>
     </div>
 </div>
 
