--- a/scripts/main/designer/components/stencil/stencil.template.html
+++ b/scripts/main/designer/components/stencil/stencil.template.html
@@ -1,4 +1,4 @@
-<div ng-repeat="component in components track by $index">
+<div ng-repeat="component in components">
     <div class="component"
          ng-class="{'selected-component': isComponentSelected(component)}">
         <label ng-click="selectComponent(component, $index)">{{::component.name}}</label>
