--- a/scripts/main/designer/components/inspector/inspector-component/Fields/Text/inspector-text-component.template.html
+++ b/scripts/main/designer/components/inspector/inspector-component/Fields/Text/inspector-text-component.template.html
@@ -1,4 +1,5 @@
-<span>Add label for selected component</span>
 <label>
-    <input type="text" ng-model="model[propertyConfig.name]">
+    Label
+    <input type="text" ng-model="model[propertyConfig.name]" ng-change="showConfigArr()" ng-model-options="{ updateOn: 'default blur', debounce: { default: 500, blur: 0 } }">
 </label>
+<pre>{{finalJSON| json}}</pre>
