--- a/scripts/main/designer/components/canvas/canvas.template.html
+++ b/scripts/main/designer/components/canvas/canvas.template.html
@@ -1,4 +1,4 @@
 <canvas-component
-        ng-click="selectFromCanvas(component, $index)"
-        ng-repeat="component in components track by $index">
+        ng-click="selectFromCanvas(component)"
+        ng-repeat="component in components">
 </canvas-component>
